--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="manifest" href="https://carolineveleda.github.io/GeekStore//manifest.json">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
  
     <link rel="stylesheet" href="master.css">
-    <link rel="manifest" href="/manifest.json">
-    <link rel="" href="sw.js">
+   
 </head>
 <body>
    <!-- style="background-color: yellow;"-->
@@ -208,7 +209,7 @@ if (navigator.serviceWorker.controller) {
  console.log('[PWA Builder] active service worker found, no need to register')
 } else {
  //Register the ServiceWorker
- navigator.serviceWorker.register('pwabuilder-sw.js', {
+ navigator.serviceWorker.register('sw.js', {
     scope: './'
  }).then(function(reg) {
     console.log('Service worker has been registered for scope:'+ reg.scope);
