--- a/formulario3.html
+++ b/formulario3.html
@@ -136,7 +136,7 @@
                               <br>
 
                         <div class="btn-group" id="ha">
-                                <a type="button" href="Formulario2.html" class="btn btn-primary">< Anterior </a>
+                                <a type="button" href="formulario2.html" class="btn btn-primary">< Anterior </a>
                         </div>
 
 
