--- a/formulario2.html
+++ b/formulario2.html
@@ -115,7 +115,7 @@
                               <br>
 
                         <div class="btn-group" id="ha">
-                                <a type="button" href="Formulario1.html" class="btn btn-primary">< Anterior </a>
+                                <a type="button" href="formulario1.html" class="btn btn-primary">< Anterior </a>
                                 <a type="button" href="formulario3.html" class="btn btn-primary">Próximo > </a>
                         </div>
 
