--- a/catalogo.html
+++ b/catalogo.html
@@ -72,7 +72,7 @@
 
                 <div >
                     <br>
-                <h2 id="textaligne">Item XXX</h2>
+                <h2 class="textaligne">Item XXX</h2>
                 <div class="dropdown show" id="ha">
                         <a class="btn btn-danger dropdown-toggle dropdown-toggle-split" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Categorias
@@ -96,7 +96,7 @@
 
                       <div class="ha">
                       <div class="card text-center" style="width: 10rem;">
-                            <img class="card-img-top" src="https://assets.xtechcommerce.com/uploads/images/medium/1dcc9cbfe33011c0c972747512d88bc4.jpg" alt="Card image cap">
+                            <img class="card-img-top"  width="30" height="165" src="https://http2.mlstatic.com/D_Q_NP_916211-MLB20514685547_122015-Q.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Nome do Item</h5>
                                 <p class="card-text">R$ 00,00</p>
@@ -109,7 +109,7 @@
 
 
                         <div class="card text-center" style="width: 10rem;">
-                                <img class="card-img-top" src="https://assets.xtechcommerce.com/uploads/images/medium/1dcc9cbfe33011c0c972747512d88bc4.jpg" alt="Card image cap">
+                                <img class="card-img-top"  width="30" height="165"  src="https://cdn.awsli.com.br/600x450/2/2688/produto/11924074/cdc26f3788.jpg" alt="Card image cap">
                                 <div class="card-body">
                                         <h5 class="card-title">Nome do Item</h5>
                                         <p class="card-text">R$ 00,00</p>
@@ -123,7 +123,7 @@
 
 
                             <div class="card text-center" style="width: 10rem;">
-                                    <img class="card-img-top" src="https://assets.xtechcommerce.com/uploads/images/medium/1dcc9cbfe33011c0c972747512d88bc4.jpg" alt="Card image cap">
+                                    <img class="card-img-top"  width="30" height="165" src="https://dafitistatic-a.akamaihd.net/p/Blitzart-Camiseta-Blitzart-Harry-Potter---Quadribol-7857-8390552-1-zoom.jpg" alt="Card image cap">
                                     <div class="card-body">
                                             <h5 class="card-title">Nome do Item</h5>
                                             <p class="card-text">R$ 00,00</p>
@@ -137,7 +137,7 @@
 
 
                             <div class="card text-center" style="width: 10rem;">
-                                 <img class="card-img-top" src="https://assets.xtechcommerce.com/uploads/images/medium/1dcc9cbfe33011c0c972747512d88bc4.jpg" alt="Card image cap">
+                                 <img class="card-img-top"  width="30" height="165" src="https://ae01.alicdn.com/kf/HTB1xpp0OpXXXXXsXpXXq6xXFXXXE/Camiseta-Anime-Goku-De-Dragon-Ball-Z-DBZ-Saiyan-Cosplay-Jap-o-tops-t-camisas-tumblr.jpg" alt="Card image cap">
                                   <div class="card-body">
                                     <h5 class="card-title">Nome do Item</h5>
                                     <p class="card-text">R$ 00,00</p></div>
@@ -152,7 +152,7 @@
 
 
                             <div class="card text-center" style="width: 10rem;">
-                                    <img class="card-img-top" src="https://assets.xtechcommerce.com/uploads/images/medium/1dcc9cbfe33011c0c972747512d88bc4.jpg" alt="Card image cap">
+                                    <img class="card-img-top"  width="30" height="165"  src="https://img.elo7.com.br/product/original/EEE22E/camiseta-star-wars-guitarrista-camisetas-de-filme.jpg" alt="Card image cap">
                                     <div class="card-body">
                                             <h5 class="card-title">Nome do Item</h5>
                                             <p class="card-text">R$ 00,00</p>
@@ -166,7 +166,7 @@
 
 
                                 <div class="card text-center" style="width: 10rem;">
-                                    <img class="card-img-top" src="https://assets.xtechcommerce.com/uploads/images/medium/1dcc9cbfe33011c0c972747512d88bc4.jpg" alt="Card image cap">
+                                    <img class="card-img-top" width="30" height="165" src="https://http2.mlstatic.com/D_Q_NP_112721-MLB20840162940_072016-Q.jpg" alt="Card image cap">
                                     <div class="card-body">
                                             <h5 class="card-title">Nome do Item</h5>
                                             <p class="card-text">R$ 00,00</p>
