--- a/catalogo2.html
+++ b/catalogo2.html
@@ -72,7 +72,7 @@
 
                 <div >
                     <br>
-                <h2 id="textaligne">Item XXX</h2>
+                <h2 class="textaligne">Item XXX</h2>
                 <div class="dropdown show" id="ha">
                         <a class="btn btn-danger dropdown-toggle dropdown-toggle-split" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Categorias
@@ -97,54 +97,54 @@
 
                       <div class="ha">
                       <div class="card text-center" style="width: 10rem;">
-                            <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/pt/5/5f/LIS_Before_the_Storm_capa.jpg" alt="Card image cap">
+                            <img class="card-img-top" width="30" height="225" src="https://upload.wikimedia.org/wikipedia/pt/5/5f/LIS_Before_the_Storm_capa.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Nome do Item</h5>
                                 <p class="card-text">R$ 00,00</p>
                             </div>
 
                             <div class="card-body">
-                                <a href="informacoes.html" class="btn btn-outline-danger">Comprar</a>
+                                <a href="informacoes2.html" class="btn btn-outline-danger">Comprar</a>
                             </div>
                         </div>
 
 
                         <div class="card text-center" style="width: 10rem;">
-                                <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/pt/5/5f/LIS_Before_the_Storm_capa.jpg" alt="Card image cap">
+                                <img class="card-img-top" width="30" height="225" src="https://static-cdn.jtvnw.net/ttv-boxart/Grand%20Theft%20Auto%20V.jpg" alt="Card image cap">
                                 <div class="card-body">
                                         <h5 class="card-title">Nome do Item</h5>
                                         <p class="card-text">R$ 00,00</p>
                                     </div>
 
                                 <div class="card-body">
-                                    <a href="informacoes.html" class="btn btn-outline-danger">Comprar</a>
+                                    <a href="informacoes2.html" class="btn btn-outline-danger">Comprar</a>
                                 </div>
                             </div>
 
 
 
                             <div class="card text-center" style="width: 10rem;">
-                                    <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/pt/5/5f/LIS_Before_the_Storm_capa.jpg" alt="Card image cap">
+                                    <img class="card-img-top" width="30" height="225" src="https://images.g2a.com/newlayout/323x433/1x1x0/8997406dd057/590dd6ccae653a041054f1aa" alt="Card image cap">
                                     <div class="card-body">
                                             <h5 class="card-title">Nome do Item</h5>
                                             <p class="card-text">R$ 00,00</p>
                                          </div>
 
                                     <div class="card-body">
-                                        <a href="informacoes.html" class="btn btn-outline-danger">Comprar</a>
+                                        <a href="informacoes2.html" class="btn btn-outline-danger">Comprar</a>
                                     </div>
                                 </div>
 
 
 
                             <div class="card text-center" style="width: 10rem;">
-                                 <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/pt/5/5f/LIS_Before_the_Storm_capa.jpg" alt="Card image cap">
+                                 <img class="card-img-top"  width="30" height="225" src="https://blznav.akamaized.net/img/games/cards/card-overwatch-7eff92e1257149aa.jpg" alt="Card image cap">
                                   <div class="card-body">
                                     <h5 class="card-title">Nome do Item</h5>
                                     <p class="card-text">R$ 00,00</p></div>
 
                                  <div class="card-body">
-                                    <a href="informacoes.html" class="btn btn-outline-danger">Comprar</a>
+                                    <a href="informacoes2.html" class="btn btn-outline-danger">Comprar</a>
                             </div>
                             </div>
 
@@ -153,28 +153,28 @@
 
 
                             <div class="card text-center" style="width: 10rem;">
-                                    <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/pt/5/5f/LIS_Before_the_Storm_capa.jpg" alt="Card image cap">
+                                    <img class="card-img-top" width="30" height="225" src="https://images-eds-ssl.xboxlive.com/image?url=8Oaj9Ryq1G1_p3lLnXlsaZgGzAie6Mnu24_PawYuDYIoH77pJ.X5Z.MqQPibUVTc3ysXkpDEzrdPm6vc_blH21oo_0eH0tFnsVSLT3X.EP12KtK3eHV3PMyDKFXPPEL8prHHy.xvfyi05Oo.LfjQ8zvK.Cu9JQwsFThDYuC1r05OTY23xnCbt8lS44gyWN8pgHyN.y.SJn77U_6oeAzCwTLw6xzJEwAqZ85b16uCB.w-&w=200&h=300&format=jpg" alt="Card image cap">
                                     <div class="card-body">
                                             <h5 class="card-title">Nome do Item</h5>
                                             <p class="card-text">R$ 00,00</p>
                                         </div>
 
                                     <div class="card-body">
-                                        <a href="informacoes.html" class="btn btn-outline-danger">Comprar</a>
+                                        <a href="informacoes2.html" class="btn btn-outline-danger">Comprar</a>
                                     </div>
                                 </div>
 
 
 
                                 <div class="card text-center" style="width: 10rem;">
-                                    <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/pt/5/5f/LIS_Before_the_Storm_capa.jpg" alt="Card image cap">
+                                    <img class="card-img-top" width="30" height="225" src="https://images.g2a.com/newlayout/323x433/1x1x0/3da9823301d7/5a9e486a5bafe36c926a2fb2" alt="Card image cap">
                                     <div class="card-body">
                                             <h5 class="card-title">Nome do Item</h5>
                                             <p class="card-text">R$ 00,00</p>
                                          </div>
 
                                     <div class="card-body">
-                                        <a href="informacoes.html" class="btn btn-outline-danger">Comprar</a>
+                                        <a href="informacoes2.html" class="btn btn-outline-danger">Comprar</a>
                                     </div>
                                 </div>
 
