--- a/formulario2.html
+++ b/formulario2.html
@@ -72,7 +72,7 @@
 
 
 
-               <h2 id="textaligne">Finalizar Compra</h2>
+               <h2 class="textaligne">Finalizar Compra</h2>
 
                <br>
 
@@ -80,23 +80,26 @@
 
                   <div class="form-group">
                     <label for="pwd">RG</label>
-                    <input type="password" class="form-control" id="pwd">
+                    <input type="number" class="form-control" id="pwd">
                   </div>
 
 
                   <div class="form-group">
                         <label for="usr">CPF</label>
-                        <input type="text" class="form-control" id="usr">
+                        <input type="number" class="form-control" id="usr">
                       </div>
 
-                      <!--<div class="form-check form-check-inline">
-                            <label for="pwd">JJJKLJK</label>
-                            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                            <label class="form-check-label" for="inlineCheckbox1">1</label>
 
-                            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                            <label class="form-check-label" for="inlineCheckbox2">2</label>
-                          </div>-->
+                      <div class="form-group">
+                        <label for="usr">Data de Nascimento</label>
+                        <input type="date" class="form-control" id="usr">
+                      </div>
+
+                      <div class="form-group">
+                          <label for="usr">Email para Contato</label>
+                          <input type="Email" class="form-control" id="usr">
+                        </div>
+                      
 
                           <label for="colFormLabel" class="col-sm-2 col-form-label">Sexo:</label>
                           <div class="custom-control custom-radio custom-control-inline">
