--- a/formulario1.html
+++ b/formulario1.html
@@ -72,7 +72,7 @@
 
 
 
-               <h2 id="textaligne">Finalizar Compra</h2>
+               <h2 class="textaligne">Finalizar Compra</h2>
 
                <br>
 
@@ -114,12 +114,6 @@
                             <label for="pwd">Nº da casa</label>
                             <input type="number" class="form-control" id="pwd">
                           </div>
-
-
-                          <div class="form-group">
-                                <label for="usr">Complemento</label>
-                                <input type="text" class="form-control" id="usr">
-                              </div>
 
 
                         <br>
