--- a/informacoes.html
+++ b/informacoes.html
@@ -73,7 +73,7 @@
 
 
 
-                <div class="card mb-3 text-center">
+                <div class="display">
                        
                         <div class="card-body text-center">
                           <h5 class="card-title">Nome do Item</h5>
