--- a/informacoes.html
+++ b/informacoes.html
@@ -70,13 +70,14 @@
 
 
 
+<br>
+<br>
 
 
-
-                <div class="display">
+                <div class="ha">
                        
-                        <div class="card-body text-center">
-                          <h5 class="card-title">Nome do Item</h5>
+                        <div class="ha">
+                          <h5 class="textaligne">Nome do Item</h5>
                           <p class="card-text-center">Informações sobre o item.</p>
                           <br>
 
