--- a/informacoes2.html
+++ b/informacoes2.html
@@ -71,11 +71,12 @@
 
 
 
+<br>
+<br>
 
-
-                <div class="card mb-3 text-center" id="ha">
+                <div class="ha">
                         
-                        <div class="card-body text-center">
+                        <div class="ha">
                           <h5 class="card-title">Nome do Item</h5>
                           <p class="card-text-center">Informações sobre o item.</p>
                           <br>
