--- a/informacoes.html
+++ b/informacoes.html
@@ -55,12 +55,12 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="catalogo.html"  aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link" href="catalogo3.html"  aria-haspopup="true" aria-expanded="false">
         Acessórios
         </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="catalogo.html"  aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link" href="catalogo4.html"  aria-haspopup="true" aria-expanded="false">
           Canecas
           </a>
           </li>
