--- a/catalogo2.html
+++ b/catalogo2.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbar2">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="Home.html"  aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link" href="index.html"  aria-haspopup="true" aria-expanded="false">
                         Home
                         </a>
                         </li>
