--- a/formulario3.html
+++ b/formulario3.html
@@ -80,9 +80,9 @@
                 <h5 class="textaligne" class="card-title">Forma de Pagamento</h5>
                 
                 <div class="btn-group" id="ha">
-                        <button type="button" class="btn btn-primary">X </a>
-                        <button type="button" class="btn btn-primary">X </a>
-                        <button type="button" class="btn btn-primary">X </a>
+                        <button type="button" class="btn btn-primary">X 
+                        <button type="button" class="btn btn-primary">X 
+                        <button type="button" class="btn btn-primary">X 
                 </div>
 
                   <br>
