--- a/login.html
+++ b/login.html
@@ -70,7 +70,7 @@
 
 
                 <br>
-                <h2 id="textaligne">Cadastre-se</h2>
+                <h2 class="textaligne">Login</h2>
                  <br>
                  <br>
                  <form>
@@ -88,14 +88,14 @@
 
                   <br>
                   <br>
-                  <div id="ha">
+                  <div class="ha">
                     <button type="button" class="btn btn-danger">Entrar</button>
                 </div>
                   <br>
-                  <p id="textaligne">Ou</p>
+                  <p class="textaligne">Ou</p>
                   <button type="button" class="btn btn-secondary btn-sm btn-block">Entrar com o Google</button>
                   <br>
-                  <div id="textaligne">
+                  <div class="textaligne">
                   <a href="cadastro.html">Não possui uma conta? Cadastre-se</a>
                 </div>
                   <br>
